# led_ti

./: .gitignore  .gitmodules  CMakeLists.txt  example.syscfg  led.c  tiarmclang.cmake
tools/: default_sbl_ospi.cfg  env_config.json  generate_appimage.py  generate_appimage.sh  syscfg_control.py
